--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /*   
-Theme Name: VCS Starter
-Theme URI: http://www.vilniuscoding.lt/
-Description: VCS Wordpress Theme
-Author: Mindaugas Degutis
-Author URI: http://www.degutis.lt
+Theme Name: Spots
+Theme URI: http://www.spots.lt/
+Description: Spots Wordpress Theme
+Author: Zymantas Katinas
+Author URI: http://www.zymantaskatinas.com
 Version: 1.0
-Text Domain: vcs-starter
+Text Domain: Spots
 Domain Path: /languages
 */
