--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -344,6 +344,7 @@
 	&__send {
 		text-align: right;	
 		& button {
+			@extend h4;
 			cursor: pointer;
 		    background-color: $darkGrey;
 			border: none;
@@ -351,12 +352,10 @@
 			border-radius: 20px;
 			opacity: 0.5;
 			transition: opacity 0.3s ease-in-out;
+			color: $lightestGrey;
 				&:hover {
 					opacity: 1;
 					transition-duration: .3s;
-				}
-				& h4 {
-					color: $lightestGrey;
 				}
 				& br {
 					display: none;
